# numby

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  clorinde.toml  docker-compose.yml  env.sh  mise.toml  package.json  tailwind.config.ts  tsconfig.json
clorinde/: Cargo.toml
clorinde/src/: queries.rs  types.rs
clorinde/src/queries/: user.rs
db/fixtures/: 20250316003517_init.sql
db/migrations/: 20250316003616_init.up.sql
db/queries/: user.sql
migrations/: 20250103023051_init.sql
queries/: user.sql
src/: layout.rs  main.rs  session.rs
src/api/: mod.rs  object.rs  query.rs
src/common/: layout.rs  mod.rs  session.rs  tracer.rs
src/components/: mod.rs  sidebar.rs
src/routes/: auth.rs  health.rs  mod.rs
src/static/: mod.rs  route.rs
src/statics/: file.rs  mod.rs  route.rs
src/tests/: utils.rs
src/tests/routes/: auth.rs
static/favicon/: site.webmanifest
tests/: auth.rs  example.rs  utils.rs
tests/features/: auth.feature
web/: base.ts  input.css  tailwind.css
