[package]
name = "numby"
version = "0.1.0"
authors = ["Justin Duch <justin@duch.me>"]
edition = "2024"

[dependencies]
clorinde = { path = "./clorinde" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-lazy = "0.1"
uuid = "1.16"
chrono = "0.4"

# web server
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-routing"] }
axum-macros = "0.5"
http-body = "1.0"
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "request-id",
    "trace",
    "util",
    "fs",
] }
tower-sessions-redis-store = "0.16"

# authentication
axum-login = { git = "https://github.com/maxcountryman/axum-login" }
password-auth = "1.0"

# frontend
maud = { version = "0.27", features = ["axum"] }
datastar = { git = "https://github.com/starfederation/datastar", features = [
    "axum",
] }

# error handling
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"

# o11y
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.24.1"
init-tracing-opentelemetry = { version = "0.27", features = [
    "jaeger",
    "tracing_subscriber_ext",
    "tls",
] }
axum-tracing-opentelemetry = "0.26"
opentelemetry = "0.27.1"
opentelemetry-otlp = "0.27.0"

[dev-dependencies]
testcontainers = "0.23.3"

[build-dependencies]
cache-busters = "0.1"
